agregando origenes de imagenes y fuente arial

--- a/src/main/resources/templates/fragments/otherreports/capacitacionesreport.html
+++ b/src/main/resources/templates/fragments/otherreports/capacitacionesreport.html
@@ -52,7 +52,7 @@
             dateFormat: 'yy-mm-dd'
         });
         $('#generar').click(function(){
-            $("#formreport").attr('action', '../pdf/'+ $("#codigo").val().toString());
+            $("#formreport").attr('action', '../capacitaciones/'+ $("#codigo").val().toString());
             $("form#formreport").submit();
             
         });
