agregando codigo de empleado a asistencia capacitacion

--- a/src/main/resources/templates/fragments/asistenciacapacitacion/asistenciacapacitacionshow.html
+++ b/src/main/resources/templates/fragments/asistenciacapacitacion/asistenciacapacitacionshow.html
@@ -23,6 +23,16 @@
                             <div class="col-sm-7">
                                 <p class="form-control-static" th:text="${asistenciacapacitacion.codigoasistenciacapacitacion}">codigo de comite</p></div>
                         </div>
+                          <div class="form-group">
+                            <label class="col-sm-5 control-label">codigoempleado:</label>
+                            <div class="col-sm-7">
+                                <p class="form-control-static" th:text="${asistenciacapacitacion.codigoempleado}">codigo de comite</p></div>
+                        </div>
+                         <div class="form-group">
+                            <label class="col-sm-5 control-label">Nombre de empleado:</label>
+                            <div class="col-sm-7">
+                                <p class="form-control-static" th:text="${asistenciacapacitacion.codigoasistenciacapacitacion}">codigo de comite</p></div>
+                        </div>
                         <div class="form-group">
                             <label class="col-sm-5 control-label">Horas Recibidas:</label>
                             <div class="col-sm-7">
@@ -40,6 +50,12 @@
                             <div class="col-sm-7">
                                 <p class="form-control-static" th:text="${asistenciacapacitacion.codigocapacitacion.nombrecapacitacion}">Codigo de Capacitacion</p>
                             </div>
+                             <div class="form-group">
+                            <label class="col-sm-5 control-label">Ubicacion fisica:</label>
+                            <div class="col-sm-7">
+                                <p class="form-control-static" th:text="${asistenciacapacitacion.ubicacionasistenciacapacitacion}">Ubicacion Fisica de Capacitacion</p>
+                            </div>
+                        </div>
                         </div>
                           <div class="form-group">
                             <label class="col-sm-5 control-label">Telefono:</label>
