--- a/src/main/resources/templates/fragments/asistenciacapacitacion/asistenciacapacitaciones.html
+++ b/src/main/resources/templates/fragments/asistenciacapacitacion/asistenciacapacitaciones.html
@@ -12,9 +12,13 @@
             <table class="table table-striped">
                 <tr>
                     <th>Codigo de Asistencia de Capacitacion</th>
+                     <th>Capacitacion</th>
+                      <th>Empleado</th>
+                       <th>Puesto</th>
+                        <th>Ubicacion Fisica</th>
                     <th>Horas Recibidas</th>
                     <th>Ubicacion Asistentes Capacitacion</th>
-                    <th>Capacitacion</th>
+                   
                      <th>Telefono</th>
                       <th>Correo</th>
                     
@@ -23,9 +27,13 @@
                 </tr>
                 <tr th:each="asistenciacapacitacion : ${asistenciacapacitaciones}">
                     <td th:text="${asistenciacapacitacion.codigoasistenciacapacitacion}">Codigo</td>
+                       <td th:text="${asistenciacapacitacion.codigocapacitacion.nombrecapacitacion}">Capacitacion</td>
+<!--                        <td th:text="${asistenciacapacitacion.nombreempleado}">Empleado</td>
+                         <td th:text="${asistenciacapacitacion.nombrepuesto}">Puesto</td>-->
+                          <td th:text="${asistenciacapacitacion.ubicacionasistenciacapacitacion}">Ubicacion Fisica</td>
                     <td th:text="${asistenciacapacitacion.horasrecibidas}">Horas Recibidas</td>
-                    <td th:text="${asistenciacapacitacion.ubicacionasistenciacapacitacion}">Ubicacion de Capacitacion</td>
-                    <td th:text="${asistenciacapacitacion.codigocapacitacion.nombrecapacitacion}">Capacitacion</td>
+                    <!--<td th:text="${asistenciacapacitacion.ubicacionasistenciacapacitacion}">Ubicacion de Capacitacion</td>-->
+                 
                       <td th:text="${asistenciacapacitacion.telefono}">Telefono</td>
                         <td th:text="${asistenciacapacitacion.email}">Correo</td>
 
