--- a/src/main/resources/templates/fragments/asistenciacapacitacion/asistenciacapacitacionform.html
+++ b/src/main/resources/templates/fragments/asistenciacapacitacion/asistenciacapacitacionform.html
@@ -23,14 +23,15 @@
                         </div>
                     </div>
 
-
-
-                    <div class="form-group">
-                        <label class="col-sm-2 control-label ">Horas Recibidas:</label>
+ 
+                     <div class="form-group">
+                        <label class="col-sm-2 control-label ">codigo empleado:</label>
                         <div class="col-sm-10">
-                            <input type="text" class="form-control numeros" required="true" name="horasrecibidas"/>
+                            <input type="text" class="form-control numeros" required="true" name="codigoempleado"/>
                         </div>
                     </div>
+
+                   
                                  <div class="form-group">
                         <label class="col-sm-2 control-label">Empleado:</label>
                         <div class="col-sm-10">
@@ -43,6 +44,13 @@
                             <!--<input type="text" class="form-control" th:field="*{formasistenciacapacitancion.codigoempleado.codigoempleado}"/>-->
                         </div>
                                         </div>
+                     <div class="form-group">
+                        <label class="col-sm-2 control-label ">Horas Recibidas:</label>
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control numeros" required="true" name="horasrecibidas"/>
+                        </div>
+                    </div>
+                   
 
                     <!--             <div class="form-group">
                          <label class="col-sm-2 control-label">Ubicacion:</label>
@@ -75,7 +83,7 @@
                     <div class="form-group">
                         <label class="col-sm-2 control-label ">ubicacion fisica:</label>
                         <div class="col-sm-10">
-                            <input type="text" id="ubicacion" class="form-control " required="true" />
+                            <input type="text" id="ubicacion" class="form-control " required="true" name="ubicacionasistenciacapacitacion" />
                         </div>
                     </div>
                     <div class="form-group">
