--- a/src/main/webapp/WEB-INF/reports/capacitaciones/rpt_capacitaciones.jrxml
+++ b/src/main/webapp/WEB-INF/reports/capacitaciones/rpt_capacitaciones.jrxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="null" pageWidth="842" pageHeight="595" orientation="Landscape" columnWidth="802" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="3efb06ae-db0d-441a-8882-24e35fcd8a5a">
 	<property name="ireport.zoom" value="1.0"/>
-	<property name="ireport.x" value="103"/>
-	<property name="ireport.y" value="68"/>
+	<property name="ireport.x" value="45"/>
+	<property name="ireport.y" value="0"/>
 	<parameter name="CODIGO" class="java.lang.String">
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 	</parameter>
@@ -66,7 +66,7 @@ and ca.fechacapacitacionhasta<=$P{FECHAFIN}]]>
 		<band height="133" splitType="Stretch">
 			<image>
 				<reportElement x="614" y="15" width="205" height="70" uuid="af190678-1ec9-436d-8e71-580e51e9ac38"/>
-				<imageExpression><![CDATA["C:\\Users\\jorge\\Documents\\NetBeansProjects\\SISADMRH\\src\\main\\resources\\static\\image\\LOGOMJ.jpg"]]></imageExpression>
+				<imageExpression><![CDATA["image\\LOGOMJ.jpg"]]></imageExpression>
 			</image>
 			<staticText>
 				<reportElement x="246" y="10" width="290" height="21" uuid="d4179ad2-eb92-499f-9b87-5f0c0b21182b"/>
@@ -77,7 +77,7 @@ and ca.fechacapacitacionhasta<=$P{FECHAFIN}]]>
 			</staticText>
 			<image>
 				<reportElement x="10" y="15" width="140" height="70" uuid="02da8dc3-2b49-4502-ade6-888bd1b52f0b"/>
-				<imageExpression><![CDATA["C:\\Users\\jorge\\Documents\\NetBeansProjects\\SISADMRH\\src\\main\\resources\\static\\image\\GOES.jpg"]]></imageExpression>
+				<imageExpression><![CDATA["image\\GOES.jpg"]]></imageExpression>
 			</image>
 			<staticText>
 				<reportElement x="291" y="29" width="201" height="20" uuid="caf94bec-5f08-4951-bb40-8e96cdcc5fe0"/>
