--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -203,6 +203,10 @@
 						<li><a href="#" th:href="@{/otherreports/renuncias}">Reporte de renuncias</a></li>
                                                 <li><a href="#" th:href="@{/otherreports/comites/}">Reporte de comites</a></li>
                                                 <li><a href="#" th:href="@{/otherreports/capacitaciones/}">Reporte de capacitaciones</a></li>
+                                                <li><a href="#" th:href="@{/otherreports/cumpleanieros/}">Reporte de cumpleanieros</a></li>
+                                                <li><a href="#" th:href="@{/otherreports/constanciaservicios/}">Constancia de Servicios</a></li>
+                                                <li><a href="#" th:href="@{/otherreports/misionesinternas/}">Reporte de Misiones Internas</a></li>
+                                                
                                                 <!--aqui segui zampando tus hace eso proba y mandas el deverge si te da aqui esta cagado begon lo importante es que waches la logica
                                                 parecen cagaditas triviales jejeje jajapajeajjrao no son triviales webos jaajaj hace tus pruebas ahi que ya no tengo carga en la laptop vaya pero necesitaba usar los js solo para un campo dui-->
                                                 
