--- a/src/main/webapp/WEB-INF/reports/otherreports/rpt_capacitaciones.jrxml
+++ b/src/main/webapp/WEB-INF/reports/otherreports/rpt_capacitaciones.jrxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="null" pageWidth="842" pageHeight="595" orientation="Landscape" columnWidth="802" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="3efb06ae-db0d-441a-8882-24e35fcd8a5a">
 	<property name="ireport.zoom" value="1.0"/>
-	<property name="ireport.x" value="103"/>
-	<property name="ireport.y" value="68"/>
+	<property name="ireport.x" value="147"/>
+	<property name="ireport.y" value="0"/>
 	<parameter name="IMAGE_PATH" class="java.lang.String" isForPrompting="false">
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 	</parameter>
@@ -68,29 +68,29 @@ and ca.fechacapacitacionhasta<=$P{FECHAFIN}]]>
 	<title>
 		<band height="133" splitType="Stretch">
 			<image>
-				<reportElement uuid="af190678-1ec9-436d-8e71-580e51e9ac38" x="614" y="15" width="205" height="70"/>
+				<reportElement x="614" y="15" width="205" height="70" uuid="af190678-1ec9-436d-8e71-580e51e9ac38"/>
 				<imageExpression><![CDATA[$P{IMAGE_PATH}.concat("LOGOMJ.jpg")]]></imageExpression>
 			</image>
 			<staticText>
-				<reportElement uuid="d4179ad2-eb92-499f-9b87-5f0c0b21182b" x="246" y="10" width="290" height="21"/>
+				<reportElement x="246" y="10" width="290" height="21" uuid="d4179ad2-eb92-499f-9b87-5f0c0b21182b"/>
 				<textElement>
 					<font size="14" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Ministerio de Justicia y Seguridad Publica]]></text>
 			</staticText>
 			<image>
-				<reportElement uuid="02da8dc3-2b49-4502-ade6-888bd1b52f0b" x="10" y="15" width="140" height="70"/>
+				<reportElement x="10" y="15" width="140" height="70" uuid="02da8dc3-2b49-4502-ade6-888bd1b52f0b"/>
 				<imageExpression><![CDATA[$P{IMAGE_PATH}.concat("GOES.jpg")]]></imageExpression>
 			</image>
 			<staticText>
-				<reportElement uuid="caf94bec-5f08-4951-bb40-8e96cdcc5fe0" x="291" y="29" width="201" height="20"/>
+				<reportElement x="291" y="29" width="201" height="20" uuid="caf94bec-5f08-4951-bb40-8e96cdcc5fe0"/>
 				<textElement>
-					<font  size="14" isBold="true"/>
+					<font size="14" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Direccion de Recuros Humanos]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="8ad40864-15db-4092-911f-a58a88621a6c" x="327" y="51" width="93" height="20"/>
+				<reportElement x="327" y="51" width="93" height="20" uuid="8ad40864-15db-4092-911f-a58a88621a6c"/>
 				<textElement>
 					<font size="14" isBold="true"/>
 				</textElement>
@@ -101,53 +101,40 @@ and ca.fechacapacitacionhasta<=$P{FECHAFIN}]]>
 	<pageHeader>
 		<band height="65" splitType="Stretch">
 			<staticText>
-				<reportElement uuid="c0c00fd5-156a-4c50-aef7-365a799f6b30" x="181" y="36" width="34" height="20"/>
-				<textElement>
-				</textElement>
+				<reportElement x="181" y="36" width="34" height="20" uuid="c0c00fd5-156a-4c50-aef7-365a799f6b30"/>
 				<text><![CDATA[Desde]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="2099c35a-3732-46ab-af8c-f8f352398d7c" x="456" y="36" width="31" height="20"/>
-				<textElement>
-				</textElement>
+				<reportElement x="456" y="36" width="31" height="20" uuid="2099c35a-3732-46ab-af8c-f8f352398d7c"/>
 				<text><![CDATA[Hasta]]></text>
 			</staticText>
 			<textField>
-				<reportElement uuid="f9ab1773-cdd0-4b9a-836d-789683b76c78" x="637" y="36" width="80" height="20"/>
-				<textElement textAlignment="Right">
-				</textElement>
+				<reportElement x="637" y="36" width="80" height="20" uuid="f9ab1773-cdd0-4b9a-836d-789683b76c78"/>
+				<textElement textAlignment="Right"/>
 				<textFieldExpression><![CDATA["Pagina "+$V{PAGE_NUMBER}+" of"]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement uuid="024f8444-2a05-4618-8734-3bedca39387b" x="661" y="18" width="33" height="20"/>
-				<textElement>
-				</textElement>
+				<reportElement x="661" y="18" width="33" height="20" uuid="024f8444-2a05-4618-8734-3bedca39387b"/>
 				<text><![CDATA[Fecha:]]></text>
 			</staticText>
 			<textField pattern="dd/MM/yyyy">
-				<reportElement uuid="54c9939e-c77b-4fd3-80fc-b777f8854106" x="698" y="16" width="100" height="20"/>
-				<textElement>
-				</textElement>
+				<reportElement x="698" y="16" width="100" height="20" uuid="54c9939e-c77b-4fd3-80fc-b777f8854106"/>
 				<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
 			</textField>
 			<textField evaluationTime="Report">
-				<reportElement uuid="112f8b5f-f2d6-4fe4-939a-4d11c0ca50ab" x="717" y="36" width="40" height="20"/>
-				<textElement>
-				</textElement>
+				<reportElement x="717" y="36" width="40" height="20" uuid="112f8b5f-f2d6-4fe4-939a-4d11c0ca50ab"/>
 				<textFieldExpression><![CDATA[" " + $V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="b5211f58-5943-483b-a28b-6237897a9fdd" x="227" y="34" width="100" height="20"/>
-				<textElement/>
+				<reportElement x="227" y="34" width="100" height="20" uuid="b5211f58-5943-483b-a28b-6237897a9fdd"/>
 				<textFieldExpression><![CDATA[$F{fechacapacitaciondesde}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="1f3e9bec-e3fb-4144-9085-e4c6e59841e3" x="509" y="34" width="100" height="20"/>
-				<textElement/>
+				<reportElement x="509" y="34" width="100" height="20" uuid="1f3e9bec-e3fb-4144-9085-e4c6e59841e3"/>
 				<textFieldExpression><![CDATA[$F{fechacapacitacionhasta}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement uuid="3a9ad8ac-75a4-409e-bc01-ce39cbfcabb1" x="336" y="11" width="156" height="20"/>
+				<reportElement x="336" y="11" width="156" height="20" uuid="3a9ad8ac-75a4-409e-bc01-ce39cbfcabb1"/>
 				<textElement>
 					<font size="12" isBold="true"/>
 				</textElement>
@@ -158,49 +145,49 @@ and ca.fechacapacitacionhasta<=$P{FECHAFIN}]]>
 	<columnHeader>
 		<band height="61" splitType="Stretch">
 			<staticText>
-				<reportElement uuid="db4def3b-df76-478d-9fab-55f1effade07" x="12" y="34" width="100" height="20"/>
+				<reportElement x="12" y="34" width="100" height="20" uuid="db4def3b-df76-478d-9fab-55f1effade07"/>
 				<textElement>
 					<font size="12" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Empleado]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="a231cc83-c2d1-41f3-a2fa-03158a3d35c3" x="129" y="34" width="100" height="20"/>
+				<reportElement x="129" y="34" width="100" height="20" uuid="a231cc83-c2d1-41f3-a2fa-03158a3d35c3"/>
 				<textElement>
 					<font size="12" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Puesto]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="7718e582-8633-4afa-818b-ca60e522e406" x="254" y="34" width="100" height="20"/>
+				<reportElement x="254" y="34" width="100" height="20" uuid="7718e582-8633-4afa-818b-ca60e522e406"/>
 				<textElement>
 					<font size="12" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Horas]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="582ff30d-c86e-43e1-bea2-574d48a1fcfe" x="370" y="34" width="100" height="20"/>
+				<reportElement x="370" y="34" width="100" height="20" uuid="582ff30d-c86e-43e1-bea2-574d48a1fcfe"/>
 				<textElement>
 					<font size="12" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Capacitacion]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="d1efa746-ff31-49b9-b359-8776e5267773" x="487" y="34" width="100" height="20"/>
+				<reportElement x="487" y="34" width="100" height="20" uuid="d1efa746-ff31-49b9-b359-8776e5267773"/>
 				<textElement>
-					<font  size="12" isBold="true"/>
+					<font size="12" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Depto Resposable]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="71e63620-3be4-4465-9340-d422eab94726" x="609" y="34" width="100" height="20"/>
+				<reportElement x="609" y="34" width="100" height="20" uuid="71e63620-3be4-4465-9340-d422eab94726"/>
 				<textElement>
-					<font  size="12" isBold="true"/>
+					<font size="12" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Fecha Desde]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="00152fde-9097-4374-87d7-3d9f121f897d" x="726" y="34" width="100" height="20"/>
+				<reportElement x="726" y="34" width="100" height="20" uuid="00152fde-9097-4374-87d7-3d9f121f897d"/>
 				<textElement>
 					<font size="12" isBold="true"/>
 				</textElement>
@@ -211,43 +198,31 @@ and ca.fechacapacitacionhasta<=$P{FECHAFIN}]]>
 	<detail>
 		<band height="25" splitType="Stretch">
 			<textField>
-				<reportElement uuid="1748ebf9-0a45-4a7c-b32a-c7d5e14c7d0f" x="12" y="0" width="100" height="20"/>
-				<textElement/>
+				<reportElement x="12" y="0" width="100" height="20" uuid="1748ebf9-0a45-4a7c-b32a-c7d5e14c7d0f"/>
 				<textFieldExpression><![CDATA[$F{nombreempleado}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="f4ae7cc1-6b28-4d72-a801-7f6cd0cd4606" x="129" y="0" width="100" height="20"/>
-				<textElement>
-				</textElement>
+				<reportElement x="129" y="0" width="100" height="20" uuid="f4ae7cc1-6b28-4d72-a801-7f6cd0cd4606"/>
 				<textFieldExpression><![CDATA[$F{nombrepuesto}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="08c4f942-8efb-4034-9574-815d33d0cc9a" x="254" y="0" width="100" height="20"/>
-				<textElement>
-				</textElement>
+				<reportElement x="254" y="0" width="100" height="20" uuid="08c4f942-8efb-4034-9574-815d33d0cc9a"/>
 				<textFieldExpression><![CDATA[$F{duracionhoracapacitacion}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="415de10f-638b-4733-a1ed-4b4f04cf8454" x="370" y="0" width="100" height="20"/>
-				<textElement>
-				</textElement>
+				<reportElement x="370" y="0" width="100" height="20" uuid="415de10f-638b-4733-a1ed-4b4f04cf8454"/>
 				<textFieldExpression><![CDATA[$F{nombrecapacitacion}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="e37c0619-51bd-42f9-8b35-0d9f4900630f" x="487" y="0" width="100" height="20"/>
-				<textElement>
-				</textElement>
+				<reportElement x="487" y="0" width="100" height="20" uuid="e37c0619-51bd-42f9-8b35-0d9f4900630f"/>
 				<textFieldExpression><![CDATA[$F{departamentoresponsable}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="8f448549-2f0a-4e9a-a9d4-0ffcfd8d2488" x="609" y="0" width="100" height="20"/>
-				<textElement>
-				</textElement>
+				<reportElement x="609" y="0" width="100" height="20" uuid="8f448549-2f0a-4e9a-a9d4-0ffcfd8d2488"/>
 				<textFieldExpression><![CDATA[$F{fechacapacitaciondesde}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="b7945dda-3755-41cd-88bf-c01e81148f0e" x="726" y="0" width="100" height="20"/>
-				<textElement/>
+				<reportElement x="726" y="0" width="100" height="20" uuid="b7945dda-3755-41cd-88bf-c01e81148f0e"/>
 				<textFieldExpression><![CDATA[$F{fechacapacitacionhasta}]]></textFieldExpression>
 			</textField>
 		</band>
@@ -255,25 +230,19 @@ and ca.fechacapacitacionhasta<=$P{FECHAFIN}]]>
 	<columnFooter>
 		<band height="50" splitType="Stretch">
 			<staticText>
-				<reportElement uuid="58650a5e-b159-453b-b0ca-b86b0277c141" x="12" y="24" width="100" height="20"/>
-				<textElement/>
+				<reportElement x="12" y="24" width="100" height="20" uuid="58650a5e-b159-453b-b0ca-b86b0277c141"/>
 				<text><![CDATA[Total Registros]]></text>
 			</staticText>
 			<textField>
-				<reportElement uuid="e50b5ccf-4940-4bc1-a440-42c968391d07" x="561" y="24" width="100" height="20"/>
-				<textElement>
-				</textElement>
+				<reportElement x="561" y="24" width="100" height="20" uuid="e50b5ccf-4940-4bc1-a440-42c968391d07"/>
 				<textFieldExpression><![CDATA[$V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
 			<textField evaluationTime="Report">
-				<reportElement uuid="71862321-0afd-4c0d-b156-dfd0df409d2a" x="683" y="24" width="100" height="20"/>
-				<textElement>
-				</textElement>
+				<reportElement x="683" y="24" width="100" height="20" uuid="71862321-0afd-4c0d-b156-dfd0df409d2a"/>
 				<textFieldExpression><![CDATA[$V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="6cd26395-9b9e-4ab0-9cdd-d73c128c8c94" x="121" y="29" width="100" height="20"/>
-				<textElement/>
+				<reportElement x="121" y="29" width="100" height="20" uuid="6cd26395-9b9e-4ab0-9cdd-d73c128c8c94"/>
 				<textFieldExpression><![CDATA[$F{count(ca.codigocapacitacion)}]]></textFieldExpression>
 			</textField>
 		</band>
@@ -281,12 +250,10 @@ and ca.fechacapacitacionhasta<=$P{FECHAFIN}]]>
 	<pageFooter>
 		<band height="54" splitType="Stretch">
 			<line>
-				<reportElement uuid="83e0cd52-da42-44b8-a813-e9d293acb19f" x="-52" y="-39" width="850" height="1"/>
+				<reportElement x="-52" y="-39" width="850" height="1" uuid="83e0cd52-da42-44b8-a813-e9d293acb19f"/>
 			</line>
 			<staticText>
-				<reportElement uuid="c45531db-a3d8-4bec-b3cd-a9328f3ddf5e" x="370" y="19" width="197" height="20"/>
-				<textElement>
-				</textElement>
+				<reportElement x="370" y="19" width="197" height="20" uuid="c45531db-a3d8-4bec-b3cd-a9328f3ddf5e"/>
 				<text><![CDATA[Derechos Reservados UES/FIA/EISI]]></text>
 			</staticText>
 		</band>
