--- a/src/main/resources/templates/fragments/otherreports/capacitacionesreport.html
+++ b/src/main/resources/templates/fragments/otherreports/capacitacionesreport.html
@@ -10,7 +10,7 @@
             <th:block th:include="../templates/menu"></th:block>
         </div>
         <div class="col-md-8">
-            <h3>GENERACION DE CONSTANCIA SALARIAL
+            <h3>GENERACION DE CAPCITACIONES
             </h3>
             <div>
                 <form class="form-horizontal" id="formreport">
